# trans-invert

./: .dockerignore  .gcloudignore  .gitignore  .trigger  AGENTS.md  API_KEY_MIGRATION.md  CLAUDE.md  Dockerfile  Dockerfile.prod  Dockerfile.simple  README.md  cloudbuild-simple.yaml  cloudbuild.yaml  docker-compose.dev.yml  docker-compose.yml  package.json  practice_materials_2025-08-28T04-24-10.json  spec.md  start.sh
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py  dtos.py  folder_use_cases.py  interfaces.py  practice_use_cases.py  review_use_cases.py  text_use_cases.py
backend/app/core/: settings.py
backend/app/domain/: __init__.py  entities.py  repositories.py  services.py  value_objects.py
backend/app/infrastructure/: __init__.py  adapters.py  container.py  repositories.py
backend/app/routers/: backup.py  config.py  essays.py  folders.py  practice.py  review.py  texts.py
backend/app/schemas/: backup.py  essay.py  text.py
backend/app/services/: ai_service.py  backup_service.py  data_persistence.py  deepseek_service.py  template_service.py
backend/app/templates/: analyze_sample_essay.j2  analyze_text.j2  evaluate_answer.j2  evaluate_essay.j2  generate_essay.j2  generate_review_article.j2
backend/backend/: analyses_data.json  practice_history.json  texts_data.json
backend/data/: analyses_data.json  app_data.json  folders_data.json  practice_history.json  texts_data.json
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  (+2 more)
(+25 files in other folders)
